# Mist

./: CMakeLists.txt  dishespage.cpp  dishwidget.cpp  dishwidget.h  dishwidget.ui  main.cpp  recipepage.cpp  recipepage.h  recipepage.ui
app/qml/screens/: RecipePage.qml
lib/: CMakeLists.txt
src/database/: AppDatabase.cpp  AppDatabase.h  Recipe.h
src/ui/: dishespage.cpp
